--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -524,13 +524,15 @@ You might like to solve (b) first.
 <p><a
 href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
 class="ans" id="lab6">
-(b) $P(X=Y) = \frac 1N.$
+(b) $P(X=Y) = \frac{1}{N+1}.$
 <p></p>
-(a) $P(X&lt; Y) = P(Y &lt; X) $  and $P(X&lt; Y) + P(Y &lt; X) P(X=Y)=1.$
+(a) $P(X&lt; Y) = P(Y &lt; X) $  and $P(X&lt; Y) + P(Y &lt; X) +P(X=Y)=1.$
 <p></p>
-Hence $P(X&gt; Y) = \frac 12\times\left(1-\frac 19\right) = \frac 49.$
+Hence $P(X&gt; Y) = \frac 12\times\left(1-\frac{1}{N+1}\right) = \frac{N}{2(N+1)}.$
 <p></p>
-So $P(X\geq Y) = \frac 49+\frac 19=\frac 59.$
+So $P(X\geq Y) = \frac{1}{N+1}+\frac{N}{2(N+1)} = \frac{N+2}{2(N+1)}.$
+<p></p>
+[Thanks to Tanmay for pointing out a couple of silly mistakes here.]
 </div></p>
 
 <hr>
