--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,8 @@
 <html><body>
 <dl>
+<dt><strong>Sepetember 28, 2025:</strong></dt>
+<dd><p>Corrected some silly typos in the solution of Exercise 6 in the <a href="condl.html" target="naya">Conditional distribution</a> page. Thanks to Tanmay Rai.</p>
+</dd>
 <dt><strong>Sepetember 27, 2025:</strong></dt>
 <dd><ul>
 <li><p>Corrected a serious typo in the two important exercises added yesterday in the <a href="condl.html" target="naya">Conditional distribution</a> page.</p>
