"nuhad cs ineq"

--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -724,11 +724,16 @@ Since this is $\geq0,$ the inequality follows immediately.
 <p></p>
 Also equality holds iff $V(Z)=0$, <i>i.e.</i>, $Z$ is degenerate.
 <p></p>
-So we have $V(X) X - cov(X,Y) Y = kV(X)$ for some $k\in{\mathbb R}.$
+So we have $P(Z=k)=1$ for some $k\in{\mathbb R},$
 <p></p>
 
+<i>i.e.</i>, $P(Y - \beta X = k) = 1$. 
 <p></p>
-This completes the proof.
+Thus, if we take $a=-\beta$, $b = 1$  and $c = k$, then 
+$P(aX+bY=c)=1$, as
+ required, completing the proof.
+<p></p>
+[Thanks to Nuhad for pointing out a typo in the proof.]
 <b><i>[QED]</i></b>
 </p>
 
