--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -283,7 +283,7 @@ $$P(X\in A,\, Y\in B) = E\big(g(X, B)\ind_{\{X\in A\}}\big).$$
 Then show that we must have $g(x_i, B) = P(Y\in B|X=x_i)$  for $B\subseteq{\mathbb R}$  and $i=1,...,m$.
 <p><a
 href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
-class="ans" id="lab2">Take $B=\{y_j\}$.</div></p>
+class="ans" id="lab2">Take $A=\{x_i\}$. [Thanks to Samyak for correcting a typo even in this short answer!]</div></p>
 </p>
 The above exercise will prove very important later, since it provides a definition of $P(Y\in
  B|X=x_i)$  free of explicit division by $P(X=x_i)$. This  freedom will later allow us to defined conditional distribution
