--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,9 +1,18 @@
 <html><body>
 <dl>
-<dt><strong>Sepetember 28, 2025:</strong></dt>
+<dt><strong>September 28, 2025:</strong></dt>
+<dd><ul>
+<li>Corrected a typos in the hint of Exercise 2 in the <a href="condl.html" target="naya">Conditional distribution</a> page. Thanks to Samyak.</li>
+</ul>
+</dd>
+<dd><ul>
+<li>Corrected a typos in the proof of Cauchy-Schwarz inequality in the <a href="joint.html" target="naya">Joint distribution</a> page. Thanks to Nuhad.</li>
+</ul>
+</dd>
+<dt><strong>September 28, 2025:</strong></dt>
 <dd><p>Corrected some silly typos in the solution of Exercise 6 in the <a href="condl.html" target="naya">Conditional distribution</a> page. Thanks to Tanmay Rai.</p>
 </dd>
-<dt><strong>Sepetember 27, 2025:</strong></dt>
+<dt><strong>September 27, 2025:</strong></dt>
 <dd><ul>
 <li><p>Corrected a serious typo in the two important exercises added yesterday in the <a href="condl.html" target="naya">Conditional distribution</a> page.</p>
 <ul>
@@ -12,7 +21,7 @@
 <li><p>Corrected a few typos in the <a href="distrib2.html" target="naya">Infinite support</a> page. Thanks to Mayukh.</p></li>
 </ul>
 </dd>
-<dt><strong>Sepetember 26, 2025:</strong></dt>
+<dt><strong>September 26, 2025:</strong></dt>
 <dd><p>Added two important exercises in the <a href="condl.html" target="naya">Conditional distribution</a> page.</p>
 </dd>
 <dt><strong>September 24, 2025:</strong></dt>
