--- a/prob1_2025/joint.html
+++ b/prob1_2025/joint.html
@@ -1272,13 +1272,13 @@ $$P(X=k) = \binom{10000}{k} 0.05^k 0.95^{10000-k}=p_k,\mbox{ say.}$$
 The probability of refund is $\sum_{k&gt;a} p_k.$  
 <p></p>
 So $a$  needs to be chosen such that 
-$$\sum_{k&gt;a} p_k \leq 0.01 &lt;\sum_{k\geq a} p_k.$$
+$$\sum_{k&gt;a} p_k &lt; 0.01 \leq\sum_{k\geq a} p_k.$$
 Finding this $a$  is not easy by hand, though trivial using a computer. 
 <p></p>
 There is a theorem called the
  Central Limit Theorem which allows a simple approximate way to find $a.$  We shall learn it in the next semester.
 <p></p>
-[Thanks to Samyak for correcting a typo here.]
+[Thanks to Samyak and Nuhad for correcting a couple of typos here.]
 </div></p>
 
 </p>
