--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -397,8 +397,10 @@ Let $Y_i = $ the hole where the $i$-th ball has fallen.
 <p></p>
 Then $E(I_i|Y_i=1)$ is the conditional probability that
 all the balls except the $i$-th one has landed in
-holes $2,...,10$ given that the $i$-th ball has landed
+holes $3,...,10$ given that the $i$-th ball has landed
 in hole 1.
+<p></p>
+[Thanks to Nuhad for correcting a typo in the line above.]
 <p></p>
 You should be able to compute this easily. Similarly, you can
 compute $E(I_i|Y_i=k)$ for $k=1,...,10.$
@@ -540,7 +542,7 @@ So $P(X\geq Y) = \frac{1}{N+1}+\frac{N}{2(N+1)} = \frac{N+2}{2(N+1)}.$
 ::<p>
 <b>EXERCISE 7:</b>&nbsp;<font size="-2">[condist5.png]</font><img width="" src="image/condist5.png" style="vertical-align:text-top;">
 <p></p>
-Here Exercise 14 means the last exercise (<i>i.e.</i>, Exercise 4 according to our numbering).
+Here Exercise 14 means the last exercise.
 <hr>
 
 <p><a
@@ -560,11 +562,11 @@ So $P(U=k) = \frac{(N-k)^2-(N-k+1)^2}{(N+1)^2} = ... .$
 <p></p>
 $P(T=k) = P(U\leq k)-P(T\leq k-1).$
 <p></p>
-Now $P(T\leq k) = P(X,Y\leq k) = P(X\leq k)P(Y\leq k) = \left(\frac{k+1}{N}\right)^2.$
+Now $P(T\leq k) = P(X,Y\leq k) = P(X\leq k)P(Y\leq k) = \left(\frac{k+1}{N+1}\right)^2.$
 <p></p>
-Similarly, $P(T\leq k-1) = \left(\frac{k}{N}\right)^2.$
+Similarly, $P(T\leq k-1) = \left(\frac{k}{N+1}\right)^2.$
 <p></p>
-So $P(T=k) = \left(\frac{(k+1)^2-k^2}{N^2} = \frac{2k+1}{N^2}.$
+So $P(T=k) = \frac{(k+1)^2-k^2}{(N+1)^2} = \frac{2k+1}{(N+1)^2}.$
 <p></p>
 (c)   $R=|Y-X|$  can take values in 0,1,...,$N.$ 
 <p></p>
@@ -576,11 +578,13 @@ Now $P(R=k \&amp; X=Y) =0.$
 <p></p>
 Also $P(R=k \&amp; X &lt; Y) =P(R=k \&amp; X &gt; Y).$
 <p></p>
-For $\{R=k\ &amp; X &lt; Y\}$  to happen we must have $X = 0,...,N-k$  and correspondingly $Y = k,...,N.$  
+For $\{R=k\&amp; X &lt; Y\}$  to happen we must have $X = 0,...,N-k$  and correspondingly $Y = k,...,N.$  
 <p></p>
-So $P(R=k\ &amp; X &lt; Y) = \frac{N-k+1}{N}.$
+So $P(R=k\&amp; X &lt; Y) = \frac{N-k+1}{(N+1)^2}.$
 <p></p>
-Hence $P(R=k) = \frac{2(N-k+1)}{N}.$
+Hence $P(R=k) = \frac{2(N-k+1)}{(N+1)^2}.$
+<p></p>
+[Thanks to Nuhad for correcting a couple of typos here.]
 </div></p>
 
 </p>
