--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -673,7 +673,7 @@ class="ans" id="lab6"><ol>
 </li>
 <li>$\frac{40}{81}$
 </li>
-<li>$\frac{55}{81}$
+<li>$\frac{65}{81}$  [Thanks to Mayukh for correcting a typo here.]
 </li>
 </ol></div></p>
 </p>
