--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -311,8 +311,9 @@ following probabilities.
 </li>
 </ol>
 
-</p>
-<ol>
+<p><a
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
+class="ans" id="lab1"><ol>
 <li>$0.128$
 </li>
 <li>$0$
@@ -323,7 +324,8 @@ following probabilities.
 </li>
 <li>$1-0.488=0.512.$
 </li>
-</ol>
+</ol></div></p>
+</p>
 
 <p></p>
 
@@ -332,19 +334,18 @@ following probabilities.
 <p>
 <b>EXERCISE 2:</b>&nbsp;
 Find $P(T\mbox{ is even})$ where $T\sim$<b>Geom</b>$(0.4).$ 
-</p>$\frac{1-\theta}{2-\theta}.$
-<p>
-<b>Hint:</b>
-<blockquote> You will need the geometric series here.
+<p><a
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
+class="ans" id="lab2"> You will need the geometric series here.
 $$\begin{eqnarray*}P(X\mbox{ is even})&amp;=&amp; P(X=2)+P(X=4)+\cdots\\
                    &amp;=&amp;(1-\theta)\theta +(1-\theta)^3 \theta+
                               (1-\theta)^5 \theta+\cdots\\
                    &amp;=&amp; \theta(1-\theta)\left[
 1+(1-\theta)^2 + (1-\theta)^4+\cdots\right].
-\end{eqnarray*}$$</blockquote>
-</p>
+\end{eqnarray*}$$
+The answer is $\frac{1-\theta}{2-\theta}.$</div></p>
 
-<p></p>
+</p>
 
 <p>
 <b>EXAMPLE 2:</b>&nbsp;
@@ -366,7 +367,11 @@ probability 1/6 of turning up), then what is the distribution of $X?$
 <b>EXERCISE 3:</b>&nbsp;
 In the above example compute the probability of getting the first `6' within
 the first 3 rolls. 
-</p>$\frac{91}{216}$
+<p><a
+href="javascript:hideShow('lab3')"><b>[Hint]</b></a><div
+class="ans" id="lab3">$\frac{91}{216}$</div></p>
+</p>
+
 <p></p>
 
 <p>
@@ -377,15 +382,16 @@ babies until they get their first son, and then they stop having children.
 either gender is equally likely. Also assume that the births are
 independent. Compute the probability that such a  couple has exactly 2
 daughters. 
-</p>$\frac18$
-<p>
-<b>Hint:</b>
-<blockquote>
+<p><a
+href="javascript:hideShow('lab4')"><b>[Hint]</b></a><div
+class="ans" id="lab4">
 Let $D$ denote the number of daughters. Then notice that 
 $D+1$
-is a <b>Geom</b>(0.5) random variable.
-</blockquote>
+is a <b>Geom</b>(0.5) random variable. So answer is $\frac 18$.
+</div></p>
 </p>
+
+<p></p>
 
 <b>Expectation and variance:</b> If $X$ is a <b>Geom</b>$(\theta)$
 random variable, then
@@ -440,16 +446,18 @@ variable for the following values of $\theta.$
 </li>
 </ol>
 
-</p>
-
-<ol>
+<p><a
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
+class="ans" id="lab5"><ol>
 <li>$\frac43,\frac23.$
 </li>
 <li>$\frac95,\frac65.$
 </li>
 <li>$\frac98 \frac38.$
 </li>
-</ol>
+</ol></div></p>
+
+</p>
 
 <p></p>
 
@@ -480,7 +488,14 @@ $$
 <p>
 <b>EXERCISE 6:</b>&nbsp;
 Compute $E(D)$ and $Var(D)$ in the son-daughter exercise above.
-</p>$E(D)=2,$ $Var(D)=2.$
+<p><a
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
+class="ans" id="lab6">$E(D)=1,$ $Var(D)=2.$  
+<p></p>
+[Thanks to Mayukh for correcting a typo here.]
+</div></p>
+</p>
+
 <p></p>
 
 <h3><a
@@ -616,8 +631,9 @@ probabilities.
 </li>
 </ol>
 
-</p>
-<ol>
+<p><a
+href="javascript:hideShow('lab8')"><b>[Hint]</b></a><div
+class="ans" id="lab8"><ol>
 <li>$\frac{27}{512}$
 </li>
 <li>$0$
@@ -626,7 +642,9 @@ probabilities.
 </li>
 <li>$\frac9{128}$
 </li>
-</ol>
+</ol></div></p>
+
+</p>
 
 <p></p>
 
@@ -652,9 +670,9 @@ $Var(Y)$ for the following values of $r$ and $\theta.$
 </li>
 </ol>
 
-</p>
-
-<ol>
+<p><a
+href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
+class="ans" id="lab9"><ol>
 <li>$6,r=3, \theta=\frac12$
 </li>
 <li>$10, 40 r=2.$
@@ -663,7 +681,9 @@ $Var(Y)$ for the following values of $r$ and $\theta.$
 </li>
 <li>$15, 30.$
 </li>
-</ol>
+</ol></div></p>
+
+</p>
 
 <p></p>
 It should be apparent from the description of the distribution that
@@ -708,14 +728,12 @@ $X_1+\cdots+X_r\sim $<b>NegBin</b>$(\theta,r)$.
 Using the above result and the mean and variance of
 <b>Geom</b>$(\theta),$
 derive the formula for mean and variance of <b>NegBin</b>$(r,\theta).$
-</p>
-
-<p>
-<b>Hint:</b>
-<blockquote>Use the result that $E(X_1+\cdots+X_r)=
+<p><a
+href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
+class="ans" id="lab10">Use the result that $E(X_1+\cdots+X_r)=
 E(X_1)+\cdots+E(X_r).$ Also, since $X_1,...,X_r$ are independent,
 so  $Var(X_1+\cdots+X_r)=
-Var(X_1)+\cdots+Var(X_r).$</blockquote>
+Var(X_1)+\cdots+Var(X_r).$</div></p>
 </p>
 
 <p></p>
@@ -783,24 +801,32 @@ If $X\sim$<b>Poi</b>$(3),$ then find the following probabilities.
 </li>
 </ol>
 
-</p>
-<ol>
+<p><a
+href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
+class="ans" id="lab11"><ol>
 <li>$27e^{-3}/8$
 </li>
 <li>$e^{-3}$
 </li>
 <li>$0$
 </li>
-<li>$43e^{-3}/4$
+<li>$13e^{-3}$  [Thanks to Mayukh for correcting a typo here.]
 </li>
-</ol>
+</ol></div></p>
+
+</p>
 
 <p></p>
 
 <p>
 <b>EXERCISE 12:</b>&nbsp;
 What is the probability that a <b>Poi</b>$(5)$ random variable is even?
-</p>$(e^5+e^{-5})/2$
+<p><a
+href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
+class="ans" id="lab12">$(1+e^{-10})/2$  [Thanks to Mayukh for correcting a typo here.]</div></p>
+
+</p>
+
 <p></p>
 
 <b>Where used:</b> One use of Poisson distribution is in approximating
@@ -845,7 +871,12 @@ box is rejected by the quality control inspector. It is known that each
 item is OK with probability 0.01, and that the items are independent. Use
 Poisson approximation to compute the probability that a box is not
 rejected.
-</p>$1-\frac{8}{3e}$
+<p><a
+href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
+class="ans" id="lab13">$1-\frac{8}{3e}$</div></p>
+
+</p>
+
 <p></p>
 
 <b>Expectation and variance:</b> If $X$ has <b>Poi</b>$(\lambda)$
@@ -918,16 +949,18 @@ Find the expected values of the following random variables.
 </li>
 </ol>
 
-</p>
-
-<ol>
+<p><a
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
+class="ans" id="lab14"><ol>
 <li>$E(X)=2.$
 </li>
 <li>$E(Y)=\frac12.$
 </li>
 <li>$E(Z)=2.5.$
 </li>
-</ol>
+</ol></div></p>
+
+</p>
 
 <p></p>
 
@@ -944,16 +977,18 @@ following values of $\lambda.$
 </li>
 </ol>
 
-</p>
-
-<ol>
+<p><a
+href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
+class="ans" id="lab15"><ol>
 <li>$1$
 </li>
 <li>$9$
 </li>
 <li>$0.01$
 </li>
-</ol>
+</ol></div></p>
+
+</p>
 
 <p></p>
 
@@ -971,8 +1006,12 @@ If $X_1,X_2,X_3,X_4$ are independent random variables with
  distributions <b>Poi</b>(1),<b>Poi</b>(2),<b>Poi</b>(4) and <b>Poi</b>(5),
  respectively.
 Find the distribution of $(X_1+\cdots+X_4).$
+<p><a
+href="javascript:hideShow('lab16')"><b>[Hint]</b></a><div
+class="ans" id="lab16"><b>Poi</b>(12)</div></p>
+
 </p>
-<b>Poi</b>(12)
+
 <p></p>
 
 <h3><a
