--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,10 +1,10 @@
 <html><body>
 <dl>
-<dt><strong>October 04, 2025:</strong></dt>
+<dt><strong>October 06, 2025:</strong></dt>
 <dd><ul>
-<li><p>Corrected a few typos in the solution of Example 4 and the hint for Exercise 7 in the <a href="condl.html" target="naya">Conditional distribution</a> page. Thanks to Nuhad.</p></li>
+<li><p>Slightly reworded the tower property and it proof. Also corrected a minor typo in the solution of Example 2 in the <a href="condl.html" target="naya">Conditional distribution</a> page. Thanks to Ankush and Arindrajit.</p></li>
 <li><p>Corrected a typo in the answer of Exercise 7 in the <a href="distrib1.html" target="naya">Distributions with finite supports</a> page. Thanks to Mayukh.</p></li>
-<li><p>Corrected a typo in the answers of Exercises 6 and 11 in the <a href="distrib2.html" target="naya">Distributions with infinite supports</a> page. Thanks to Mayukh.</p></li>
+<li><p>Corrected a typo in the answers of Exercises 6, 11 and 12 in the <a href="distrib2.html" target="naya">Distributions with infinite supports</a> page. Thanks to Mayukh.</p></li>
 </ul>
 </dd>
 <dt><strong>September 28, 2025:</strong></dt>
