--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -887,7 +887,43 @@ class="ans" id="lab23">No, the result may not hold if the $X_i$'s have a depende
  asymetric. A counterexample is as follows. 
 <p></p>
 $X_1 = $  outcome of a roll of a fair die. $X_2$  is obtained from $X_1$  by
- swapping 1 and 2. $X_3$  is obtained from $X_1$  by swapping 1 and 3. Then $E(X_1|X_1+X_2+X_3=6)=1\neq \frac 63.$ 
+ swapping 1 and 2. $X_3$  is obtained from $X_1$  by swapping 1 and 3. If the definitions
+ of $X_2,X_3$  are not clear, then see their values below for all the possible values of $X_1:$
+<center>
+<table style="" border="1">
+
+<tr>
+<td colspan="" rowspan="">$X_1$</td><td colspan="" rowspan="">$X_2$</td><td colspan="" rowspan="">$X_3$</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">1</td><td colspan="" rowspan="">2</td><td colspan="" rowspan="">3</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">2</td><td colspan="" rowspan="">1</td><td colspan="" rowspan="">same as $X_1$</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">3</td><td colspan="" rowspan="">same as $X_1$</td><td colspan="" rowspan="">1</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">4</td><td colspan="" rowspan="">same as $X_1$</td><td colspan="" rowspan="">same as $X_1$</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">5</td><td colspan="" rowspan="">same as $X_1$</td><td colspan="" rowspan="">same as $X_1$</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">6</td><td colspan="" rowspan="">same as $X_1$</td><td colspan="" rowspan="">same as $X_1$</td>
+</tr>
+
+</table>
+</center>
+Then
+ $E(X_1|X_1+X_2+X_3=6)=1\neq \frac 63.$ 
 </div></p>
 
 <hr>
