--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>October 08, 2025:</strong></dt>
+<dd><ul>
+<li>Made the hint of Exercise 25 more lucid in the <a href="condl.html" target="naya">Conditional distribution</a> page.</li>
+</ul>
+</dd>
 <dt><strong>October 07, 2025:</strong></dt>
 <dd><ul>
 <li>Made the hint of Exercise 18 more lucid (hopefully!) in the <a href="condl.html" target="naya">Conditional distribution</a> page.</li>
