--- a/prob1_2025/distrib1.html
+++ b/prob1_2025/distrib1.html
@@ -170,6 +170,9 @@ function myFunction() {
 <a href="#Hypergeometric">Hypergeometric</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
+<a href="#Capture-recapture method">Capture-recapture method</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
 <a href="#Relation between binomial and hypergeometric">Relation between binomial and hypergeometric</a>
 </li>
 <li>
@@ -1166,6 +1169,16 @@ class="ans" id="lab13"><ol>
 
 </p>
 
+<p></p>
+
+<h2><a
+name="Capture-recapture method">Capture-recapture method</a></h2>
+Here is a simulation program for the capture-recapture program that ChatGPT wrote according to my specification:
+ <a href="caprecap2.html">capture-recapture simulation</a>. There are lots fish in a pond (total number $N$  is
+ unknown). You want to estimate $N$. First you capture 200 random fish and tag them (colour them red in the simulation),
+ then independently recapture 100 fish (circle them in blue). The program will tell you the number of tagged fish  in the
+ recapture. Your job is to estimate $N$  based on that. The true value of $N$  is, by the way, $1000$  (which
+you are not supposed to know as a statistician). See how close you get to this true value. 
 <h2><a
 name="Relation between binomial and hypergeometric">Relation between binomial and hypergeometric</a></h2>
 
