--- a/prob1_2025/distrib2.html
+++ b/prob1_2025/distrib2.html
@@ -525,8 +525,7 @@ Is it possible for a random variable $X$  to have a distribution such that $P(X\
 <fieldset>
 <legend><b>Definition: Memoryless</b></legend>
 A random variable $X$  is called <b><font color="red" size="40">memoryless</font></b>  if for all $x$  and all
- $a&gt;0$  the conditional probability  $\frac{P(X\geq x+a)}{P( X\geq
- x)}$  is free of $x$  (need not be free of $a$). 
+ $a&gt;0$  the conditional probability  $P(X\geq x+a|X\geq x)$  is free of $x$  (need not be free of $a$). 
 </fieldset>
 The lifespans of certain types of
  electronic components are believed to be memoryless. Such components die only due to sudden random shocks, and not due to
@@ -568,7 +567,7 @@ $r$ is some positive integer.
 <b>PMF:</b> 
 $$
 P(X=x) = \left\{\begin{array}{ll}
-            {x-1\choose r-1}\theta^r (1-\theta)^{x-r}&\text{if }$x=r,r+1,...$\\
+            {x-1\choose r-1}\theta^r (1-\theta)^{x-r}&\text{if }x=r,r+1,...\\
             0 &\text{otherwise.}
          \end{array}\right.
 $$
@@ -772,7 +771,7 @@ name="Poisson distribution">Poisson distribution</a></h2>
 <b>Notation:</b> <b>Poi</b>$(\lambda),$ where $\lambda &gt; 0.$
 <p></p>
 
-<b>Sample space:</b> \{0,1,2,...\}
+<b>Sample space:</b> {0,1,2,...}
 <p></p>
 
 <b>PMF:</b> 
@@ -1081,7 +1080,6 @@ $$
 \left(1-\frac \lambda n \right)^{-k}\rightarrow 1,
 $$
 since $k$ is fixed. Also
-and 
 $$
 \left(1-\frac \lambda n \right)^n \rightarrow e^{-\lambda}.
 $$
