--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -730,15 +730,22 @@ By symmetry, the answer is $\frac 1n$  if $k=1.$  So, for general $k$  the answe
 </p>
 ::<p>
 <b>EXERCISE 16:</b>&nbsp;<font size="-2">[morecond2.png]</font><img width="" src="image/morecond2.png" style="vertical-align:text-top;">
+Here you should use the fact that for continuous joint distribition $P(X_i=X_j)=0$  for $i\neq j$. Thus, you may
+ assume that all the $X_j$'s are distinct. 
 <p><a
 href="javascript:hideShow('lab16')"><b>[Hint]</b></a><div
 class="ans" id="lab16">Let $I_j$ be the indicator variable for whether there is a
-record at position $j.$ Then $P(I_j=1)$ may be computed
+record at position $j.$ Let $R_j$  be the rank of $X_j$. The smallest of the
+ $X_j$'s has rank $1$, the largest has rank $n$. Then
+ $P(I_j=1)$ may be computed
 by total probability:
 $$
-P(I_j=1) = \sum_{k=j}^n P(X_j=k)P(I_j=1|X_j=k).
+P(I_j=1) = \sum_{k=j}^n P(R_j=k)P(I_j=1|R_j=k).
 $$
-Similarly for $P(I_jI_k=1).$</div></p>
+Similarly for $P(I_jI_k=1).$
+<p></p>
+[Thanks to Nuhad for pointing out a serious mistake here.]
+</div></p>
 
 <hr>
 </p>
