--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>October 11, 2025:</strong></dt>
+<dd><ul>
+<li>Corrected a serious mistake in the hint of Exercise 16 in the <a href="condl.html" target="naya">Conditional distribution</a> page.</li>
+</ul>
+</dd>
 <dt><strong>October 10, 2025:</strong></dt>
 <dd><ul>
 <li>Added some AI-generated interactive simulation of the capture-recapture method. See it <a href="caprecap2.html" target="naya">here</a>. It is also linked from the <a href="distrib1.html" target="naya">Distributions with finite supports</a> page. The code is completely written by ChatGPT.</li>
