--- a/prob1_2025/pgf.html
+++ b/prob1_2025/pgf.html
@@ -369,8 +369,8 @@ Let us compute $E(t^{X_2}|X_1=k)$  for $k=0,1,2,... $. In particular we shall fo
 </table>
 </center>
 We have colour-coded the second generation individuals by the their parents. Let $Y_i$  be the contribution of the $i$-th
- individual of the first generation. We have assumed that each individual splits independently and
- identically of the rest. So $Y_1, Y_2, Y_3$  are IID random variables. 
+ individual of the first generation. We have assumed that each individual splits  identically and independently
+ of the rest. So $Y_1, Y_2, Y_3$  are IID random variables. 
 <p></p>
 So $E(t^{X_2}|X_1=3) = E(t^{Y_1+Y_2+Y_3}|X_1=3) = E(t^{Y_1+Y_2+Y_3})$, since $Y_i$'s are
  independent of $X_1$  (number of my children has nothing to do with the number of my siblings!). 
