--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,4 +1,7 @@
 <html><body>
+<p><strong>October 13, 2025:</strong></p>
+<pre><code>- Corrected hint to Exercise 9 in the 
+[Conditional distribution](condl.html){target=&quot;naya&quot;} page.</code></pre>
 <dl>
 <dt><strong>October 12, 2025:</strong></dt>
 <dd><ul>
