--- a/prob1_2025/condl.html
+++ b/prob1_2025/condl.html
@@ -639,7 +639,24 @@ So $|A| = \frac{(2r)!}{x_1!\times\cdots\times x_r!}.$
 Hence 
 $P\{(X_1,...,X_r) = (x_1,...,x_r)\}= \frac{ |A| }{ |\Omega| }.$
 <p></p>
-(b) $\frac{ (2r)!}{(4r)^r}. $
+(b) Let $B$  be the event in question. Then we can compute $|B|$  as follows. 
+<ul>
+
+<li>
+<b>Step 1:</b>  Choose two balls to go into box 1: $\binom{2r}{2}$  ways.</li>
+
+<li>
+<b>Step 2:</b>  Choose two other balls to go into box 2: $\binom{2r-2}{2}$  ways.</li>
+
+<li>...</li>
+
+<li>
+<b>Step 1:</b>  Choose the last two balls to go into box r: $1$  way.</li>
+
+</ul> 
+So $|B| = \frac{(2r)!}{2^r}$. 
+<p></p>
+Hence $P(B) = \frac{|B|}{|\Omega|} = \frac{(2r)!}{(2r^2)^r}$.
 </div></p>
 
 <hr>
